# TrustworthyFL

./: .gitignore  ECF_attack_scenarios.md  ECF_method_and_fixes.md  MODELS.md  README.md  pyproject.toml  requirements.txt
experiments/: ABLATIONS.md  ABLATION_RESULTS.md  parse_meanstd.py  parse_real.py  parse_results.py  probe_trigger_summary.csv  run_ablation_mode.sh  run_ablation_nattack.sh  run_ablations.sh  run_all.progress  run_all_matrices.sh  run_all_real.sh  run_fmnist_grid.sh  run_fmnist_r500.sh  run_imdb_distilbert.sh  run_imdb_full.sh  run_imdb_grid.sh  run_intermittent.sh  run_intermittent2.sh  run_normgate_off.sh  run_queue.sh  run_queue2.sh  run_queue3.sh  run_queue_final.sh  summary.csv
experiments/candidate_fix/: RESULTS.md
experiments/fmnist_r500/: RESULTS.md  summary.csv
experiments/imdb_distilbert/: summary.csv
experiments/intermittent/: followup.out  nohup.out  summary.csv
experiments/matrix1/: progress.txt
experiments/normgate_off/: nohup.out  summary.csv
experiments/probe_trigger/: run.progress  run.sh  run_hardgate.progress  run_hardgate.sh  run_realistic.progress  run_realistic.sh  run_root500.progress  run_root500.sh  run_root500_rest.progress  run_root500_rest.sh  run_v2.progress  run_v2.sh  summary.csv
experiments/rda_fidelity/: RESULTS.md
experiments/real_full/: REPORT.md  nohup.out  summary.csv
experiments/spurious_probe/: run_wm.progress  run_wm.sh  run_wm_strong.progress  run_wm_strong.sh
future_work/: README.md
tests/: test_core_numpy.py
trustfl/attacks/: data_attacks.py  update_attacks.py
(+39 files in other folders)
